Update typewriter posts:
- add category

--- a/_posts/2018-10-16-royal-khm-1938.md
+++ b/_posts/2018-10-16-royal-khm-1938.md
@@ -4,7 +4,7 @@ title: Royal KHM (1938)
 date: '2018-10-16T15:31:00.000-07:00'
 author: Erik Bruchez
 tags:
-- typewriters
+category: Typewriters
 modified_time: '2018-10-16T15:31:27.815-07:00'
 blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-3694581927949249934
 blogger_orig_url: https://blog.bruchez.name/2018/10/royal-khm-1938.html
@@ -18,7 +18,7 @@ The KHM probably has the best action of all the machines I have so far. Royal go
 
 Based on my smooth experience removing the carriage of the Underwood 6 for cleaning, I tried doing this with the Royal. But I learned that not *all* typewriters have a carriage that comes out easily. I persisted and managed to get it out and back in, with difficulty. It did make cleaning much easier, but I wouldn't recommend going through this unless really necessary. Adjusting the carriage after putting it back is not exactly easy either. I have since learned that the common wisdom about carriages is "Don't remove the carriage unless absolutely necessary." In some cases though, like with early Underwoods, it is so easy that this wisdom shouldn't apply. [^carriage]
 
-The Royal KHM is a successor to the Royal 10, another classic typewriter known for its side windows - yes, glass windows on the sides! The KHM doesn't have windows but has two panels which can be removed easily. The panels protect the interior of the machine from dust and give it a fairly modern look. In general I like the look of the KHM, including the smooth black paint and the distinctive ribbon covers on top. 
+The Royal KHM is a successor to the Royal 10, another classic typewriter known for its side windows - yes, glass windows on the sides! The KHM doesn't have windows but has two panels which can be removed easily. The panels protect the interior of the machine from dust and give it a fairly modern look. In general I like the look of the KHM, including the smooth black paint and the distinctive ribbon covers on top.
 
 Some keys (“6”, “E”, “R”, “T”, “I”, “O”, “L”) clearly got replaced on this machine during its lifetime: they are white instead of yellow, and convex instead of concave.
 
