--- a/_posts/2018-11-13-royal-5-1913.md
+++ b/_posts/2018-11-13-royal-5-1913.md
@@ -4,7 +4,7 @@ title: Royal 5 (1913)
 date: '2018-11-13T22:53:00.000-08:00'
 author: Erik Bruchez
 tags:
-- typewriters
+category: Typewriters
 modified_time: '2020-05-03T14:29:37.162-07:00'
 blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-2300980471190310054
 blogger_orig_url: https://blog.bruchez.name/2018/11/royal-5-1913.html
