--- a/_posts/2018-12-09-remington-12-1924.md
+++ b/_posts/2018-12-09-remington-12-1924.md
@@ -4,7 +4,7 @@ title: Remington 12 (1924)
 date: '2018-12-09T23:18:00.000-08:00'
 author: Erik Bruchez
 tags:
-- typewriters
+category: Typewriters
 modified_time: '2020-05-03T14:26:20.645-07:00'
 blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-1920979843270419168
 blogger_orig_url: https://blog.bruchez.name/2018/12/remington-12-1924.html
