--- a/_posts/2018-11-13-royal-5-1913.md
+++ b/_posts/2018-11-13-royal-5-1913.md
@@ -10,11 +10,11 @@ blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-23009804711903100
 blogger_orig_url: https://blog.bruchez.name/2018/11/royal-5-1913.html
 ---
 
-After two typewriters in good condition obtained in April 2017, [^two machines] I was ready for something else for machine number 3. I found on eBay a 1913 Royal 5 [^history] and I decided to get it. Shipping was about the same as the price of the machine itself, but I just liked the look of the machine and the idea of a challenge!
+After two typewriters in good condition obtained in April 2017, [^two] I was ready for something else for machine number 3. I found on eBay a 1913 Royal 5 [^history] and I decided to get it. Shipping was about the same as the price of the machine itself, but I just liked the look of the machine and the idea of a challenge!
 
 Indeed, this machine was not great when I got it: the carriage was very rusty, the internals were extremely filthy, a platen knob was broken, and the letter "E"'s glass was shattered. It was missing the draw band and a rubber foot (the other 3 feet were in bad shape). It didn't work at all. When I got it and took the first pictures, I thought that there was some beauty in its degradation, but I just couldn't let it stay this way!
 
-![Rusty and dusty Royal 5 (1913)](https://ebruchez.github.io/blog/images/2x/typewriters/royal5keys.jpg)
+![Rusty and dusty Royal 5 (1913)](https://ebruchez.github.io/blog/images/2x/typewriters/royal5keys.jpg){:standalone}
 
 Soon after receiving the machine, I started cleaning it. I removed the carriage (which was fairly easy after my experience with the KHM), dunked it into Evapo-Rust, removed all the panels, used PB Blaster to clean the inside, etc. I also made my first mistake: while cleaning the exterior, I made some of the decals worse. Live and learn! But to be fair, they were covered in grime and shellac and whatnot, which appears to be typical for Royal 5s.
 
@@ -26,11 +26,11 @@ In May 2018, thanks to the magic of a Facebook group and a kind donor, I obtaine
 
 And so, on a nice day in August 2018, the machine typed again! I even installed some new rubber feet and made a new typebar rest with felt. Now, it doesn't type perfectly yet. The carriage is a bit wobbly. With shift lock, the carriage gets stuck about halfway through the line. I am not sure if increasing the spring tension will help. But even with these issues, it is possible to type a page pretty nicely. I have already used the machine to write several daily journal entries.
 
-![The 1913 Royal 5 typing again!](https://ebruchez.github.io/blog/images/2x/typewriters/royal5typing.jpg)
+![The 1913 Royal 5 typing again!](https://ebruchez.github.io/blog/images/2x/typewriters/royal5typing.jpg){:standalone}
 
 I for one find this machine quite fascinating. Its flat look is striking, of course, but the way the keys slide through the keyboard panels and pull the typebars is also unique. It is relatively simple mechanically but rock-solid: think that a cleaning and replacing a couple of broken parts was enough to  make it type again - in two colors, and even with a tabulator!
 
-![The Royal 5 keyboard](https://ebruchez.github.io/blog/images/2x/typewriters/royal5keyboard.jpg)
+![The Royal 5 keyboard](https://ebruchez.github.io/blog/images/2x/typewriters/royal5keyboard.jpg){:standalone}
 
 This said, this Royal 5 is not what I would call "restored" yet. There are a few things I would like to do:
 
@@ -47,6 +47,6 @@ More:
 
 - [Royal 5 (1913) - Restoration in progress](https://photos.app.goo.gl/s9KqGocjY32Ltjih8)
 
-[^two machines]: The [Underwood 6](https://blog.bruchez.name/2018/10/underwood-6-1936.html) and the [Royal KHM](https://blog.bruchez.name/2018/10/royal-khm-1938.html).
+[^two]: The [Underwood 6](https://blog.bruchez.name/2018/10/underwood-6-1936.html) and the [Royal KHM](https://blog.bruchez.name/2018/10/royal-khm-1938.html).
 
 [^history]: Royal came up with their Royal Standard (later rebaptized No. 1) in 1906, and improved on it with the Royal 5 in 1910. These machines are sometimes called "flatbeds" because of their distinctively low profile. It appears that people (or businesses) didn't exactly love the look and, starting with the beautiful Royal 10 in 1913, the company started making machines that looked more like other successful machines on the market like the Underwood or the Remington.
