--- a/_posts/2018-12-09-remington-12-1924.md
+++ b/_posts/2018-12-09-remington-12-1924.md
@@ -12,7 +12,7 @@ blogger_orig_url: https://blog.bruchez.name/2018/12/remington-12-1924.html
 
 One Underwood and two Royals: [^underwood-royals] in April 2017, I was clearly missing another big typewriter brand! So when I saw a Craigslist ad for a Remington 12 which looked in beautiful condition, I jumped on it. This became machine number 5 [^underwood5] in the collection.
 
-![Remington 12 (1924)](https://ebruchez.github.io/blog/images/2x/typewriters/remington12.jpg)
+![Remington 12 (1924)](https://ebruchez.github.io/blog/images/2x/typewriters/remington12.jpg){:standalone}
 
 The remington 12, made from 1922 to 1943, is a successor to the Remington 10, the first front-strike machine that Remington started producing in 1908. [^upstrikes]
 
@@ -23,17 +23,17 @@ The 12 shows its ancient heritage from the Remington family:
 
 On the other hand, the 12 takes standard width ribbons and, like the late model 10s (as opposed to the early model 10s), it has a modern segment. But unlike the 10 which had an open frame, the body of the 12 is fully enclosed by metal panels. The two side panels have cute little doors to access the ribbon spools.
 
-![The right-hand side door](https://ebruchez.github.io/blog/images/2x/typewriters/remington12doors.jpg)
+![The right-hand side door](https://ebruchez.github.io/blog/images/2x/typewriters/remington12doors.jpg){:standalone width="75%"}
 
 I didn't have much to do on this machine. I did *not* attempt to remove the carriage, but I removed all the panels, cleaned the inside, including a PB Blaster and mineral spirits round, cleaned the types, and used a black sharpie to touch up some areas of the body. It could use some new feet and a new platen: the current rubber is in good shape but very hard.
 
 I particularly like the 5 red tab keys on this machine. The key tops are in great condition. The tab system, which the Remington 10 had already, is nice because you can directly jump to a tab position by pressing the corresponding key, instead of having to press multiple times. This comes at the cost of more mechanical complexity, with a clever system at the back of the carriage to grab the right tab stop depending on the specific tab key pressed. I am missing, unfortunately, 3 of the 5 tab stops in the back.
 
-![The 5 red tab keys](https://ebruchez.github.io/blog/images/2x/typewriters/remington12tabkeys.jpg)
+![The 5 red tab keys](https://ebruchez.github.io/blog/images/2x/typewriters/remington12tabkeys.jpg){:standalone}
 
 The Remington 12 is not a very rare machine, but I just love it and it is now one of my prized machines, proudly displayed in my house.
 
-![Pretty view](https://ebruchez.github.io/blog/images/2x/typewriters/remington12types.jpg)
+![Pretty view](https://ebruchez.github.io/blog/images/2x/typewriters/remington12types.jpg){:standalone}
 
 More:
 
