--- a/_posts/2018-10-16-royal-khm-1938.md
+++ b/_posts/2018-10-16-royal-khm-1938.md
@@ -12,7 +12,7 @@ blogger_orig_url: https://blog.bruchez.name/2018/10/royal-khm-1938.html
 
 After the [Underwood 6 from 1936](https://blog.bruchez.name/2018/10/underwood-6-1936.html), there was an good chance I would look into getting *another* typewriter. So this one came up on eBay, and I noticed that it didn't sell and that the seller, while not exactly local, was not very far. So I contacted him and asked if he would be willing to keep the machine for me. That's how I got machine number 2 in my collection in April 2017: a 1938 Royal KHM, fairly priced. We took a small family road trip to get it.
 
-![Royal KHM (1938)](https://raw.githubusercontent.com/ebruchez/public/master/Blog%20posts/images/typewriters/khm1938.jpg)
+![Royal KHM (1938)](https://raw.githubusercontent.com/ebruchez/public/master/Blog%20posts/images/typewriters/khm1938.jpg){:standalone}
 
 The KHM probably has the best action of all the machines I have so far. Royal got this part right really early on. Machine from other big brands like Underwood and Remington don't come close during this period of time (the 1930s). The KHM is a workhorse and a real pleasure to type with. Also, it's a basket shift, which means that the shift key is easier to use.
 
@@ -22,7 +22,7 @@ The Royal KHM is a successor to the Royal 10, another classic typewriter known f
 
 Some keys (“6”, “E”, “R”, “T”, “I”, “O”, “L”) clearly got replaced on this machine during its lifetime: they are white instead of yellow, and convex instead of concave.
 
-![The keyboard with replaced keys](https://raw.githubusercontent.com/ebruchez/public/master/Blog%20posts/images/typewriters/khm1938keys.jpg)
+![The keyboard with replaced keys](https://raw.githubusercontent.com/ebruchez/public/master/Blog%20posts/images/typewriters/khm1938keys.jpg){:standalone}
 
 The left ribbon cover is missing a part so it doesn't lock properly. I do need to fix an issue with the right margin release. I am also considering putting on new decals - which I have already bought. It seems typical that these machines lose their decals after a while. I think that with new decals well applied, the machine will look amazing.
 
