Enable `jekyll-relative-links` plugin

--- a/_posts/2018-11-13-royal-5-1913.md
+++ b/_posts/2018-11-13-royal-5-1913.md
@@ -10,7 +10,7 @@ blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-23009804711903100
 blogger_orig_url: https://blog.bruchez.name/2018/11/royal-5-1913.html
 ---
 
-After two typewriters in good condition obtained in April 2017, [^two] I was ready for something else for machine number 3. I found on eBay a 1913 Royal 5 [^history] and I decided to get it. Shipping was about the same as the price of the machine itself, but I just liked the look of the machine and the idea of a challenge!
+After [two](2018-10-12-underwood-6-1936.md) [typewriters](2018-10-16-royal-khm-1938.md) in good condition obtained in April 2017, I was ready for something else for machine number 3. I found on eBay a 1913 Royal 5 [^history] and I decided to get it. Shipping was about the same as the price of the machine itself, but I just liked the look of the machine and the idea of a challenge!
 
 Indeed, this machine was not great when I got it: the carriage was very rusty, the internals were extremely filthy, a platen knob was broken, and the letter "E"'s glass was shattered. It was missing the draw band and a rubber foot (the other 3 feet were in bad shape). It didn't work at all. When I got it and took the first pictures, I thought that there was some beauty in its degradation, but I just couldn't let it stay this way!
 
@@ -46,7 +46,5 @@ I hope to have updates on the progress of this restoration soon!
 More:
 
 - [Royal 5 (1913) - Restoration in progress](https://photos.app.goo.gl/s9KqGocjY32Ltjih8)
-
-[^two]: The [Underwood 6](https://blog.bruchez.name/2018/10/underwood-6-1936.html) and the [Royal KHM](https://blog.bruchez.name/2018/10/royal-khm-1938.html).
 
 [^history]: Royal came up with their Royal Standard (later rebaptized No. 1) in 1906, and improved on it with the Royal 5 in 1910. These machines are sometimes called "flatbeds" because of their distinctively low profile. It appears that people (or businesses) didn't exactly love the look and, starting with the beautiful Royal 10 in 1913, the company started making machines that looked more like other successful machines on the market like the Underwood or the Remington.
