--- a/_posts/2018-12-09-remington-12-1924.md
+++ b/_posts/2018-12-09-remington-12-1924.md
@@ -10,7 +10,7 @@ blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-19209798432704191
 blogger_orig_url: https://blog.bruchez.name/2018/12/remington-12-1924.html
 ---
 
-One Underwood and two Royals: [^underwood-royals] in April 2017, I was clearly missing another big typewriter brand! So when I saw a Craigslist ad for a Remington 12 which looked in beautiful condition, I jumped on it. This became machine number 5 [^underwood5] in the collection.
+One [Underwood](2018-10-12-underwood-6-1936.md) and [two](2018-10-16-royal-khm-1938.md) [Royals](2018-11-13-royal-5-1913.md): in April 2017, I was clearly missing another big typewriter brand! So when I saw a Craigslist ad for a Remington 12 which looked in beautiful condition, I jumped on it. This became machine number 5 [^underwood5] in the collection.
 
 ![Remington 12 (1924)](https://ebruchez.github.io/blog/images/2x/typewriters/remington12.jpg){:standalone}
 
@@ -39,8 +39,6 @@ More:
 
 - [My typewriter database gallery](http://typewriterdatabase.com/1924-remington-12.10908.typewriter)
 - [Public photo album](https://photos.app.goo.gl/cAddEF25eBsuM2CUA)
-
-[^underwood-royals]: The [Underwood 6](https://blog.bruchez.name/2018/10/underwood-6-1936.html), the [Royal KHM](https://blog.bruchez.name/2018/10/royal-khm-1938.html), and the [Royal 5](https://blog.bruchez.name/2018/11/royal-5-1913.html).
 
 [^underwood5]: In the meanwhile, I also obtained a fairly cheap Underwood 5, which is machine number 4. But that machine was really not in good condition and I quickly decided to set it aside.
 
