--- a/_posts/2018-10-16-royal-khm-1938.md
+++ b/_posts/2018-10-16-royal-khm-1938.md
@@ -10,7 +10,7 @@ blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-36945819279492499
 blogger_orig_url: https://blog.bruchez.name/2018/10/royal-khm-1938.html
 ---
 
-After the [Underwood 6 from 1936](https://blog.bruchez.name/2018/10/underwood-6-1936.html), there was an good chance I would look into getting *another* typewriter. So this one came up on eBay, and I noticed that it didn't sell and that the seller, while not exactly local, was not very far. So I contacted him and asked if he would be willing to keep the machine for me. That's how I got machine number 2 in my collection in April 2017: a 1938 Royal KHM, fairly priced. We took a small family road trip to get it.
+After the [Underwood 6 from 1936](2018-10-12-underwood-6-1936.md), there was an good chance I would look into getting *another* typewriter. So this one came up on eBay, and I noticed that it didn't sell and that the seller, while not exactly local, was not very far. So I contacted him and asked if he would be willing to keep the machine for me. That's how I got machine number 2 in my collection in April 2017: a 1938 Royal KHM, fairly priced. We took a small family road trip to get it.
 
 ![Royal KHM (1938)](https://raw.githubusercontent.com/ebruchez/public/master/Blog%20posts/images/typewriters/khm1938.jpg){:standalone}
 
