--- a/_posts/2018-10-12-underwood-6-1936.md
+++ b/_posts/2018-10-12-underwood-6-1936.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Underwood 6 (1936)
+title: The Underwood 6 (1936)
 date: '2018-10-12T14:23:00.000-07:00'
 author: Erik Bruchez
 tags:
