--- a/_posts/2018-10-16-royal-khm-1938.md
+++ b/_posts/2018-10-16-royal-khm-1938.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Royal KHM (1938)
+title: The Royal KHM (1938)
 date: '2018-10-16T15:31:00.000-07:00'
 author: Erik Bruchez
 tags:
