--- a/_posts/2018-11-13-royal-5-1913.md
+++ b/_posts/2018-11-13-royal-5-1913.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Royal 5 (1913)
+title: The Royal 5 (1913)
 date: '2018-11-13T22:53:00.000-08:00'
 author: Erik Bruchez
 tags:
