--- a/_posts/2018-12-09-remington-12-1924.md
+++ b/_posts/2018-12-09-remington-12-1924.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Remington 12 (1924)
+title: The Remington 12 (1924)
 date: '2018-12-09T23:18:00.000-08:00'
 author: Erik Bruchez
 tags:
