--- a/_posts/2018-10-12-underwood-6-1936.md
+++ b/_posts/2018-10-12-underwood-6-1936.md
@@ -8,6 +8,8 @@ category: Typewriters
 modified_time: '2018-10-12T14:29:54.656-07:00'
 blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-6324382816603684846
 blogger_orig_url: https://blog.bruchez.name/2018/10/underwood-6-1936.html
+redirect_from:
+  - /2018/10/underwood-6-1936.html
 ---
 
 In April 2017 I bought my first typewriter: a classic Underwood 6 from 1936. It was actually advertised as an Underwood 5, which would have been even more classic, but I liked the machine and went for it.
