--- a/_posts/2018-11-13-royal-5-1913.md
+++ b/_posts/2018-11-13-royal-5-1913.md
@@ -8,6 +8,8 @@ category: Typewriters
 modified_time: '2020-05-03T14:29:37.162-07:00'
 blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-2300980471190310054
 blogger_orig_url: https://blog.bruchez.name/2018/11/royal-5-1913.html
+redirect_from:
+  - /2018/11/royal-5-1913.html
 ---
 
 After [two](2018-10-12-underwood-6-1936.md) [typewriters](2018-10-16-royal-khm-1938.md) in good condition obtained in April 2017, I was ready for something else for machine number 3. I found on eBay a 1913 Royal 5 [^history] and I decided to get it. Shipping was about the same as the price of the machine itself, but I just liked the look of the machine and the idea of a challenge!
