--- a/_posts/2018-12-09-remington-12-1924.md
+++ b/_posts/2018-12-09-remington-12-1924.md
@@ -8,6 +8,8 @@ category: Typewriters
 modified_time: '2020-05-03T14:26:20.645-07:00'
 blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-1920979843270419168
 blogger_orig_url: https://blog.bruchez.name/2018/12/remington-12-1924.html
+redirect_from:
+  - /2018/12/remington-12-1924.html
 ---
 
 One [Underwood](2018-10-12-underwood-6-1936.md) and [two](2018-10-16-royal-khm-1938.md) [Royals](2018-11-13-royal-5-1913.md): in April 2017, I was clearly missing another big typewriter brand! So when I saw a Craigslist ad for a Remington 12 which looked in beautiful condition, I jumped on it. This became machine number 5 [^underwood5] in the collection.
