Move to Markdown and update categories

--- a/_posts/2014-01-28-2013-year-in-review.md
+++ b/_posts/2014-01-28-2013-year-in-review.md
@@ -5,6 +5,7 @@ date: '2014-01-28T23:46:00.000-08:00'
 author: Erik Bruchez
 tags:
 - self
+category: Other
 modified_time: '2015-11-13T21:44:31.600-08:00'
 blogger_id: tag:blogger.com,1999:blog-2849901641571065621.post-2900530842614443538
 blogger_orig_url: https://blog.bruchez.name/2014/01/2013-year-in-review.html
