Update image and HTTPS links

--- a/_posts/2018-10-12-underwood-6-1936.md
+++ b/_posts/2018-10-12-underwood-6-1936.md
@@ -20,7 +20,7 @@ So I am starting with this same Underwood 6 from 1936, machine number 1 in my co
 
 In general, it is good to buy large "desktop" typewriters (*standards*, as they are called) locally, since shipping them is risky as sellers often don't know how to pack them well. Many typewriters get damaged in transit this way.
 
-![Underwood 6 (1936)](https://raw.githubusercontent.com/ebruchez/public/master/Blog%20posts/images/typewriters/underwood6.jpg){:standalone}
+![Underwood 6 (1936)](/assets/posts/underwood-6/underwood6.jpg){:standalone}
 
 This is a direct descendant of the mythical Underwood 5, the first truly modern typewriter which set the standard for how typewriters should look like for decades. Like the 5, it features an open frame: you can see the inside of the machine and there is only a panel in front. This is nice if you have an engineer's mindset, but of course that means that the machine can gather dust more easily. It looks a little bit more modern than the 5, without the fancy decals of the early 5s, for example. But the decal on the paper table of the Underwood 6 is really beautiful, as are the green and black keys.
 
@@ -36,7 +36,7 @@ Overall this is one of the favorite machines in my collection and I am really ha
 
 More:
 
-- [My typewriter database gallery](http://typewriterdatabase.com/1936-underwood-6.10828.typewriter)
+- [My typewriter database gallery](https://typewriterdatabase.com/1936-underwood-6.10828.typewriter)
 - [Public photo album](https://photos.app.goo.gl/VSHVNAFevRfEj4yh8)
 
 [^working]: Only a subset of those are truly working and in display condition. The others need work.
