Update to 1961 Baby post

--- a/_posts/2021-08-28-hermes-baby-1961.md
+++ b/_posts/2021-08-28-hermes-baby-1961.md
@@ -21,11 +21,11 @@ This machine features a Swiss-French keyboard. Note the dieresis (tréma) and ci
 
 ![Swiss-French keys](/assets/posts/hermes-baby-1961/2x/IMG_3280.jpg){:standalone}
 
-Within the right wing, there is a vendor tag from "Office Moderne - Mme E. Olivier et M. Rudaz SION":
+Within the right wing, there is a vendor tag from "Office Moderne - M<sup>me</sup> E. Olivier et M. Rudaz SION":
 
 ![Vendor tag](/assets/posts/hermes-baby-1961/2x/IMG_3392.jpg){:standalone}
 
-I used the machine in the summers of 2019 and 2021 in Switzerland. I was able to carry it with me back to California as a carry-on alongside another Hermes Baby from 1951.
+I used the machine in the summers of 2019 and 2021 in Switzerland.
 
 ![In use in 2021](/assets/posts/hermes-baby-1961/2x/IMG_1693.jpg){:standalone}
 
@@ -44,13 +44,11 @@ The huge benefit of ultraportables is, of course, their small size and weight. F
 
 ## Cleaning the machine
 
-This machine mostly needed cleaning and a few small fixes. For cleaning, I removed the body panels, as I always do when I can. The machine just sits on the bottom plate and simply comes out of it once the panels are removed.
+I only recently took the machine with me to California alongside another Hermes Baby from 1951. This machine mostly needed cleaning and a few small fixes. I removed the body panels, as I always do when possible. The machine just sits on the bottom plate and simply comes out of it once the panels are removed.
 
 ![Cleaning](/assets/posts/hermes-baby-1961/2x/IMG_3178.jpg){:standalone}
 
-I vacuumed and blew (air compressor) the soundproofing felt, but didn't feel it absolutely required replacing. That might still happen at a later time.
-
-I went through the usual process:
+I vacuumed and blew (air compressor) the soundproofing felt, but didn't feel it absolutely required replacing. That might still happen at a later time. Then I went through what is now the usual process:
 
 - removing all the body panels
 - using the air compressor to blow out dust and eraser shavings
@@ -83,7 +81,7 @@ However, at some point - I really don't know when - it also got a bunch of blue 
 Luckily almost all of this went away with:
 
 - Simple Green
-- Hoppes #9 (this took care of the ink stains)
+- Hoppe's #9 (this took care of the ink stains)
 - Meguiar's Ultimate Compound
 
 I used Meguiar's on the top of the case as well as the bottom. This helped mostly with the bottom of the case, where the slightly abrasive compound removed more grime (and probably a tiny layer of paint).
@@ -144,4 +142,4 @@ I am really happy with this Hermes Baby. It is now clean and very pretty. I don'
 
 [^ultraportables]: Still, let's face it: this is way inferior to an Hermes 3000, or a Royal QDL, or probably most regular-size portables - not even talking about standard (desktop) machines.
 
-[^ambassador]: The Ambassador is actually really light for such a huge machine, given its aluminium frame.
+[^ambassador]: The Ambassador is actually really light for such a huge machine due to its aluminium frame.
