--- a/_posts/2021-09-07-balaji.md
+++ b/_posts/2021-09-07-balaji.md
@@ -6,6 +6,8 @@ date: '2021-09-07T22:21:00.000-07:00'
 category: Link Blog
 ---
 
+![](https://samharris.org/wp-content/uploads/2021/08/259-newsletter-website.png){:standalone width="75%"}
+
 I recently listened to the entire [4-hour interview of Balaji Srinivasan by Sam Harris](https://samharris.org/podcasts/259-reckoning-come/). I was mainly struck by how poorly someone with a resume as impressive as Balaji's (Stanford, A16z, etc.) conveyed his worldview and (presumed) theses. I came out of the experience not knowing what to make of that multi-hour apparent confusion. Is Balaji a visionary? Or is he under a weird spell of techno-utopia that can't see its own shortcomings? Or something else?
 
 Now this impression might be partly due to the fact that I was not familiar with Balaji's ideas and work before that podcast. But this reminds me of something that Stephen Wolfram (fairly arrogantly) said (paraphrasing): if I can't understand what you are trying to explain, maybe the issue is on your side. [^wolfram]
